--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <hr class="linhaSuperior">
         <div class=mostrarSigno>
-            <img class='imageSigno' id='imageSigno' src="./signo00.png" alt="Flowers in Chania">
+            <img class='imageSigno' id='imageSigno' src="img/signo00.svg" alt="Flowers in Chania">
             <h3 id='s_zodiac'>Descubra seu dia!</h3>
             <p id='tmsg' class="msgSigno">Insira seu aniversário</p>
             <div class='enviaDados' id='enviaDados'>
