css bugfix and data upadate

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/fyodor" type="text/css" />
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/comfortaa-bold" type="text/css" />
     <script type="text/javascript" src="astroTuite.js" charset="utf-8"></script>
+
+    <link rel="shortcut icon" href="./atuite.ico" type="image/x-icon" />
     <title>AstroTuite</title>
 
 </head>
